--- a/app/src/main/res/layout/fragment_summary.xml
+++ b/app/src/main/res/layout/fragment_summary.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".SummaryFragment">
 
     <ScrollView
         android:background="#ffeb3b"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -19,6 +20,18 @@
                 android:layout_height="wrap_content"
                 android:focusable="true"
                 android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/order_summary_label"
+                    android:text="@string/order_summary"
+                    android:textStyle="bold"
+                    style="@style/NameStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_StartOf="parent"
+                    app:layout_constraintEnd_Endof="parent"
+                    app:layout_constraintTop_toTopOf="parent"/>
+
 
                 <TextView
                     android:id="@+id/crust_label"
@@ -58,11 +71,63 @@
                     android:layout_marginBottom="16dp"
                     tools:text="Margarita" />
 
+                <View
+                    android:id="@+id/divider_two"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/black"/>
 
+                <TextView
+                    android:id="@+id/drinks_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/drinks"
+                    android:textStyle="bold"
+                    android:textAllCaps="true"
+                    android:layout_marginTop="10dp" />
 
+                <TextView
+                    android:id="@+id/drinks_chosen"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
+                    tools:text="@string/coke"/>
 
+                <View
+                    android:id="@+id/divider_three"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/black"/>
+
+                <TextView
+                    android:id="@+id/subtotal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="30dp"
+                    android:layout_marginEnd="15dp"
+                    android:text="@string/subtotal"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_gravity="end"
+                    app:layout_constraintTop_toBottomOf="@id/divider_three"
+                    tools:text="Subtotal £15.00" />
 
             </LinearLayout>
+
+            <Button
+                android:id="@+id/send_order_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/send_order">
+            </Button>
+
+            <Button
+                android:id="@+id/cancel_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/cancel">
+            </Button>
 
 
 
