--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,15 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="yellow">#ffff00</color>
+    <color name="yellow_light">#ffff5a</color>
+    <color name="yellow_dark">#c7cc00</color>
+    <color name="brown">#ffab40</color>
+    <color name="brown_light">#ffdd71</color>
+    <color name="brown_dark">#c77c02</color>
+    <color name="red">#ff3d00</color>
+
+
+
 </resources>
