--- a/app/src/main/res/layout/fragment_pizza.xml
+++ b/app/src/main/res/layout/fragment_pizza.xml
@@ -3,6 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".PizzaFragment">
+
+    <data>
+        <variable
+            name="viewModel"
+            type="com.jimmy.pizzaapp.model.OrderViewModel" />
+    </data>
     
     <ScrollView
         android:background="#ffeb3b"
