--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -18,7 +18,7 @@
     <fragment
         android:id="@+id/crustFragment"
         android:name="com.jimmy.pizzaapp.CrustFragment"
-        android:label="fragment_crust"
+        android:label="@string/crust"
         tools:layout="@layout/fragment_crust" >
         <action
             android:id="@+id/action_crustFragment_to_pizzaFragment"
@@ -27,7 +27,7 @@
     <fragment
         android:id="@+id/pizzaFragment"
         android:name="com.jimmy.pizzaapp.PizzaFragment"
-        android:label="fragment_pizza"
+        android:label="@string/pizza"
         tools:layout="@layout/fragment_pizza" >
         <action
             android:id="@+id/action_pizzaFragment_to_drinkFragment"
@@ -36,7 +36,7 @@
     <fragment
         android:id="@+id/drinkFragment"
         android:name="com.jimmy.pizzaapp.DrinkFragment"
-        android:label="fragment_drink"
+        android:label="@string/drinks"
         tools:layout="@layout/fragment_drink" >
         <action
             android:id="@+id/action_drinkFragment_to_summaryFragment"
@@ -45,6 +45,6 @@
     <fragment
         android:id="@+id/summaryFragment"
         android:name="com.jimmy.pizzaapp.SummaryFragment"
-        android:label="fragment_summary"
+        android:label="@string/order_summary"
         tools:layout="@layout/fragment_summary" />
 </navigation>
