--- a/app/src/main/res/layout/fragment_summary.xml
+++ b/app/src/main/res/layout/fragment_summary.xml
@@ -49,6 +49,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 android:layout_marginBottom="16dp"
+                android:text="@{viewModel.crust}"
                 tools:text="Deep Pan"/>
 
             <View
@@ -71,6 +72,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 android:layout_marginBottom="16dp"
+                android:text="@{viewModel.pizza}"
                 tools:text="Margarita" />
 
             <View
@@ -93,6 +95,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
+                android:text="@{viewModel.drinks}"
                 tools:text="@string/coke"/>
 
             <View
