--- a/app/src/main/res/layout/fragment_summary.xml
+++ b/app/src/main/res/layout/fragment_summary.xml
@@ -73,6 +73,7 @@
                 android:layout_marginTop="4dp"
                 android:layout_marginBottom="16dp"
                 android:text="@{viewModel.pizza}"
+                android:textStyle="bold"
                 tools:text="Margarita" />
 
             <View
@@ -96,6 +97,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
                 android:text="@{viewModel.drinks}"
+                android:textStyle="bold"
                 tools:text="@string/coke"/>
 
             <View
