--- a/app/src/main/res/layout/fragment_summary.xml
+++ b/app/src/main/res/layout/fragment_summary.xml
@@ -50,6 +50,7 @@
                 android:layout_marginTop="4dp"
                 android:layout_marginBottom="16dp"
                 android:text="@{viewModel.crust}"
+                android:textStyle="bold"
                 tools:text="Deep Pan"/>
 
             <View
