--- a/app/src/main/res/layout/fragment_pizza.xml
+++ b/app/src/main/res/layout/fragment_pizza.xml
@@ -94,7 +94,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
                 android:layout_marginEnd="15dp"
-                android:text="@string/subtotal"
+                android:text="@{@string/subtotal(viewModel.price)}"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
