First Version complete.

--- a/app/src/main/res/layout/fragment_title.xml
+++ b/app/src/main/res/layout/fragment_title.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".TitleFragment"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -10,10 +11,12 @@
             type="com.jimmy.pizzaapp.TitleFragment" />
     </data>
 
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#ffeb3b">
+
 
         <LinearLayout
             android:layout_width="match_parent"
