Made a few more changes to the title screen.

--- a/app/src/main/res/layout/fragment_crust.xml
+++ b/app/src/main/res/layout/fragment_crust.xml
@@ -24,14 +24,15 @@
 
             <TextView
                 android:id="@+id/crust_text"
+                style="@style/NameStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/aladin"
                 android:text="@string/crust"
                 app:layout_constraintBottom_toTopOf="@+id/crust_selection"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                style="@style/NameStyle" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <RadioGroup
                 android:id="@+id/crust_selection"
