--- a/app/src/main/res/layout/fragment_pizza.xml
+++ b/app/src/main/res/layout/fragment_pizza.xml
@@ -25,6 +25,7 @@
                 style="@style/NameStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/aladin"
                 android:text="@string/pizza"
                 app:layout_constraintBottom_toTopOf="@+id/pizza_selection"
                 app:layout_constraintEnd_toEndOf="parent"
