--- a/app/src/main/res/layout/fragment_title.xml
+++ b/app/src/main/res/layout/fragment_title.xml
@@ -50,12 +50,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="36dp"
-            android:fontFamily="cursive"
+            android:fontFamily="@font/aladin"
             android:text="@string/title_of_pizza_place"
             android:textAlignment="center"
-            android:textColor="@color/black"
-            android:textSize="38sp"
+            android:textColor="@color/white"
+            android:textSize="35sp"
             android:textStyle="bold"
+            android:layout_marginTop="-20dp"
             app:layout_constraintBottom_toTopOf="@+id/start_btn"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
